# zair

./: .gitignore  Cargo.toml  README.md  run_agent.bat  start.vbs  start_agent.bat  start_agent.vbs  start_agent_glm52.bat  start_now.bat  worklog.md
src/: main.rs
src/agent/: mod.rs  mod.rs.bak3  mod.rs.bak_20260611_112418
src/auth/: mod.rs
src/browser/: mod.rs  mod.rs.bak2  mod.rs.bak_20260611_112418
src/client/: mod.rs
src/config/: mod.rs
