[package]
name = "zair"
version = "0.1.0"
edition = "2024"
description = "ZAI Browser Chat Service - Rust rewrite with headless Chrome automation"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "cookies"] }

# SSE / EventSource parsing
eventsource-stream = "0.2"
futures = "0.3"

# Browser automation: raw CDP via Chrome subprocess + WebSocket (no chromiumoxide)

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto (MD5 for sign, Ed25519 for AICQ identity)
md-5 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
x25519-dalek = { version = "2", features = ["static_secrets"] }
hex = "0.4"
base64 = "0.22"

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
dirs = "6"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
thiserror = "2"
anyhow = "1"
